--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "amqplib": "^0.10.3",
+    "redis": "^4.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   },
